Updated <Function: @0x11b5 len=0x25>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T06:55:32.815157Z
-last_push_artifact = 0x11c0
-last_push_artifact_type = "comment"
+last_push_time = 2023-12-10T06:55:32.823946Z
+last_push_artifact = 0x11b5
+last_push_artifact_type = "function"
