--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T06:55:32.834339Z
-last_push_artifact = 0x11b8
+last_push_time = 2023-12-10T06:57:23.866675Z
+last_push_artifact = 0x12a1
 last_push_artifact_type = "comment"
