Updated <Comment: @0x120d len=19>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T07:02:49.212649Z
-last_push_artifact = 0x11da
-last_push_artifact_type = "function"
+last_push_time = 2023-12-10T07:03:09.307881Z
+last_push_artifact = 0x120d
+last_push_artifact_type = "comment"
