--- a/comments.toml
+++ b/comments.toml
@@ -4,3 +4,10 @@ addr = 0x11b8
 func_addr = 0x11b5
 comment = "if head is null\n"
 decompiled = true
+
+[0x120d]
+last_change = 2023-12-10T07:03:09.307881Z
+addr = 0x120d
+func_addr = 0x11da
+comment = "set new_node's key\n"
+decompiled = true
