--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T07:04:11.202571Z
-last_push_artifact = 0x11e3
-last_push_artifact_type = "comment"
+last_push_time = 2023-12-10T07:04:26.103926Z
+last_push_artifact = 0x11da
+last_push_artifact_type = "function"
