--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T07:07:16.487235Z
-last_push_artifact = 0x1214
+last_push_time = 2023-12-10T07:07:18.604551Z
+last_push_artifact = 0x120d
 last_push_artifact_type = "comment"
