Updated <StackVar: long[6] head; -0x30@0x123e>

--- a/functions/0000123e.toml
+++ b/functions/0000123e.toml
@@ -1,4 +1,12 @@
 [metadata]
 addr = 0x123e
 size = 0xb0
-last_change = 2023-12-10T06:57:50.780625Z
+last_change = 2023-12-10T07:08:25.363068Z
+
+[stack_vars.-0x30]
+last_change = 2023-12-10T07:08:25.363068Z
+offset = -48
+name = "head"
+type = "long[6]"
+size = 0x30
+addr = 0x123e
