--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T07:07:18.614702Z
-last_push_artifact = 0x11e3
-last_push_artifact_type = "comment"
+last_push_time = 2023-12-10T07:08:25.363068Z
+last_push_artifact = 0x123e
+last_push_artifact_type = "function"
