--- a/comments.toml
+++ b/comments.toml
@@ -18,3 +18,10 @@ addr = 0x120d
 func_addr = 0x11da
 comment = "set new_node's key\n"
 decompiled = true
+
+[0x12a1]
+last_change = 2023-12-10T07:08:40.995878Z
+addr = 0x12a1
+func_addr = 0x123e
+comment = "if buf not found in linked list\n"
+decompiled = true
