Updated <Comment: @0x1289 len=40>

--- a/comments.toml
+++ b/comments.toml
@@ -19,9 +19,9 @@ func_addr = 0x11da
 comment = "set new_node's key\n"
 decompiled = true
 
-[0x12a1]
-last_change = 2023-12-10T07:08:40.995878Z
-addr = 0x12a1
+[0x1289]
+last_change = 2023-12-10T07:08:41.849301Z
+addr = 0x1289
 func_addr = 0x123e
-comment = "if buf not found in linked list\n"
+comment = "read 1 random byte to buf until <= 0xae\n"
 decompiled = true
