--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T07:10:24.362988Z
-last_push_artifact = 0x120d
+last_push_time = 2023-12-10T07:10:24.381457Z
+last_push_artifact = 0x11e3
 last_push_artifact_type = "comment"
