Updated <Comment: @0x12c2 len=45>

--- a/comments.toml
+++ b/comments.toml
@@ -25,3 +25,10 @@ addr = 0x1289
 func_addr = 0x123e
 comment = "read 1 random byte to buf until <= 0xae\n"
 decompiled = true
+
+[0x12c2]
+last_change = 2023-12-10T07:10:51.995270Z
+addr = 0x12c2
+func_addr = 0x123e
+comment = "quit after 175 bytes mapped into linked list\n"
+decompiled = true
