--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T07:11:04.725400Z
-last_push_artifact = 0x12a1
+last_push_time = 2023-12-10T07:11:04.734797Z
+last_push_artifact = 0x12c2
 last_push_artifact_type = "comment"
