Updated <Comment: @0x12e1 len=20>

--- a/comments.toml
+++ b/comments.toml
@@ -25,3 +25,10 @@ addr = 0x1289
 func_addr = 0x123e
 comment = "read 1 random byte to buf until <= 0xae\n"
 decompiled = true
+
+[0x12e1]
+last_change = 2023-12-10T07:11:04.695443Z
+addr = 0x12e1
+func_addr = 0x123e
+comment = "return head of list\n"
+decompiled = true
