Updated <Comment: @0x139c len=22>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T07:11:09.195768Z
-last_push_artifact = 0x130b
-last_push_artifact_type = "function"
+last_push_time = 2023-12-10T07:11:10.018274Z
+last_push_artifact = 0x139c
+last_push_artifact_type = "comment"
