--- a/comments.toml
+++ b/comments.toml
@@ -39,3 +39,10 @@ addr = 0x1355
 func_addr = 0x130b
 comment = "map 0x1000 bytes with rw\n"
 decompiled = true
+
+[0x136b]
+last_change = 2023-12-10T07:11:34.272230Z
+addr = 0x136b
+func_addr = 0x130b
+comment = "null 175th byte of file_mem\n"
+decompiled = true
