Updated <Comment: @0x13d8 len=17>

--- a/comments.toml
+++ b/comments.toml
@@ -39,3 +39,10 @@ addr = 0x1355
 func_addr = 0x130b
 comment = "map 0x1000 bytes with rw\n"
 decompiled = true
+
+[0x13d8]
+last_change = 2023-12-10T07:11:34.238958Z
+addr = 0x13d8
+func_addr = 0x130b
+comment = "null more memory\n"
+decompiled = true
