--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T07:11:10.058324Z
-last_push_artifact = 0x1355
+last_push_time = 2023-12-10T07:11:34.238958Z
+last_push_artifact = 0x13d8
 last_push_artifact_type = "comment"
