--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T07:11:34.272230Z
-last_push_artifact = 0x136b
+last_push_time = 2023-12-10T07:11:34.282704Z
+last_push_artifact = 0x139c
 last_push_artifact_type = "comment"
