Updated <FuncHeader: long shuf(args=2); @0x12ee>

--- a/functions/000012ee.toml
+++ b/functions/000012ee.toml
@@ -1,4 +1,22 @@
 [metadata]
 addr = 0x12ee
 size = 0x1d
-last_change = 2023-12-10T07:14:40.282400Z
+last_change = 2023-12-10T07:14:40.304212Z
+
+[header]
+last_change = 2023-12-10T07:14:40.304212Z
+name = "shuf"
+addr = 0x12ee
+type = "long"
+
+[header.args.0]
+offset = 0x0
+name = "a1"
+type = "node *"
+size = 0x8
+
+[header.args.1]
+offset = 0x1
+name = "a2"
+type = "long"
+size = 0x8
