--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x6bb]
-last_change = 2023-12-10T08:12:32.442946Z
-addr = 0x6bb
-name = "aSrand"
-size = 0x6
+[0x6c1]
+last_change = 2023-12-10T08:12:32.452671Z
+addr = 0x6c1
+name = "aSetvbuf"
+size = 0x8
