--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:12:32.442946Z
-last_push_artifact = 0x6bb
+last_push_time = 2023-12-10T08:12:32.452671Z
+last_push_artifact = 0x6c1
 last_push_artifact_type = "global variable"
