Updated <GlobalVar: None register_tm_clones; @4800 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,8 +4,8 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x40f8]
-last_change = 2023-12-10T08:12:32.636734Z
-addr = 0x40f8
-name = "read"
+[0x12c0]
+last_change = 2023-12-10T08:12:32.646484Z
+addr = 0x12c0
+name = "register_tm_clones"
 size = 0x1
