--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:12:32.498183Z
-last_push_artifact = 0x3d20
+last_push_time = 2023-12-10T08:12:32.506881Z
+last_push_artifact = 0x3fd0
 last_push_artifact_type = "global variable"
