Updated <GlobalVar: None aPuts; @1744 len=5>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x4110]
-last_change = 2023-12-10T08:12:32.406280Z
-addr = 0x4110
-name = "time"
-size = 0x1
+[0x6d0]
+last_change = 2023-12-10T08:12:32.415510Z
+addr = 0x6d0
+name = "aPuts"
+size = 0x5
