--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x1170]
-last_change = 2023-12-10T08:12:32.302533Z
-addr = 0x1170
-name = ".puts"
+[0x16f0]
+last_change = 2023-12-10T08:12:32.311762Z
+addr = 0x16f0
+name = "removez"
 size = 0x1
