Updated <GlobalVar: None aRead; @1664 len=5>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x4120]
-last_change = 2023-12-10T08:12:32.588392Z
-addr = 0x4120
-name = "setvbuf"
-size = 0x1
+[0x680]
+last_change = 2023-12-10T08:12:32.597087Z
+addr = 0x680
+name = "aRead"
+size = 0x5
