--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x680]
-last_change = 2023-12-10T08:12:32.597087Z
-addr = 0x680
-name = "aRead"
-size = 0x5
+[0x1ac0]
+last_change = 2023-12-10T08:12:32.606132Z
+addr = 0x1ac0
+name = "_fini"
+size = 0x1
