--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x6da]
-last_change = 2023-12-10T08:12:32.378854Z
-addr = 0x6da
-name = "aStdin"
-size = 0x6
+[0x4108]
+last_change = 2023-12-10T08:12:32.388056Z
+addr = 0x4108
+name = "fprintf"
+size = 0x1
