Updated <GlobalVar: None printf; @16616 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x6a4]
-last_change = 2023-12-10T08:12:32.525561Z
-addr = 0x6a4
-name = "aStrtoul"
-size = 0x8
+[0x40e8]
+last_change = 2023-12-10T08:12:32.534824Z
+addr = 0x40e8
+name = "printf"
+size = 0x1
