--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:12:32.525561Z
-last_push_artifact = 0x6a4
+last_push_time = 2023-12-10T08:12:32.534824Z
+last_push_artifact = 0x40e8
 last_push_artifact_type = "global variable"
