Updated <GlobalVar: None time; @16656 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x202f]
-last_change = 2023-12-10T08:12:32.397169Z
-addr = 0x202f
-name = "a133m"
-size = 0x8
+[0x4110]
+last_change = 2023-12-10T08:12:32.406280Z
+addr = 0x4110
+name = "time"
+size = 0x1
