Updated <GlobalVar: None setvbuf; @16672 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x3f90]
-last_change = 2023-12-10T08:12:32.579716Z
-addr = 0x3f90
-name = "srand_ptr"
-size = 0x8
+[0x4120]
+last_change = 2023-12-10T08:12:32.588392Z
+addr = 0x4120
+name = "setvbuf"
+size = 0x1
