--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:12:32.623706Z
-last_push_artifact = 0x4008
+last_push_time = 2023-12-10T08:12:32.636734Z
+last_push_artifact = 0x40f8
 last_push_artifact_type = "global variable"
