Updated <GlobalVar: None setup; @6728 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x71f]
-last_change = 2023-12-10T08:12:32.227605Z
-addr = 0x71f
-name = "aLibcSo6"
-size = 0xa
+[0x1a48]
+last_change = 2023-12-10T08:12:32.237086Z
+addr = 0x1a48
+name = "setup"
+size = 0x1
