--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:12:32.470540Z
-last_push_artifact = 0x6ef
+last_push_time = 2023-12-10T08:12:32.479470Z
+last_push_artifact = 0x4100
 last_push_artifact_type = "global variable"
