Updated <GlobalVar: None alarm; @16624 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x3fb0]
-last_change = 2023-12-10T08:12:32.543936Z
-addr = 0x3fb0
-name = "setvbuf_ptr"
-size = 0x8
+[0x40f0]
+last_change = 2023-12-10T08:12:32.552992Z
+addr = 0x40f0
+name = "alarm"
+size = 0x1
