--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x6b4]
-last_change = 2023-12-10T08:12:32.615093Z
-addr = 0x6b4
-name = "aFclose"
-size = 0x7
+[0x4008]
+last_change = 2023-12-10T08:12:32.623706Z
+addr = 0x4008
+name = "__dso_handle"
+size = 0x1
