--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:12:08.186157Z
-last_push_artifact = 0x40b0
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-10T08:12:32.120153Z
+last_push_artifact = 0x15b1
+last_push_artifact_type = "function"
