Updated <GlobalVar: None create; @5553 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x6c1]
-last_change = 2023-12-10T08:12:32.452671Z
-addr = 0x6c1
-name = "aSetvbuf"
-size = 0x8
+[0x15b1]
+last_change = 2023-12-10T08:12:32.461709Z
+addr = 0x15b1
+name = "create"
+size = 0x1
