--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:12:32.570833Z
-last_push_artifact = 0x2974
+last_push_time = 2023-12-10T08:12:32.579716Z
+last_push_artifact = 0x3f90
 last_push_artifact_type = "global variable"
