Updated <GlobalVar: None aMalloc; @1675 len=7>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x40f0]
-last_change = 2023-12-10T08:12:32.552992Z
-addr = 0x40f0
-name = "alarm"
-size = 0x1
+[0x68b]
+last_change = 2023-12-10T08:12:32.561863Z
+addr = 0x68b
+name = "aMalloc"
+size = 0x7
