--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x2588]
-last_change = 2023-12-10T08:12:32.283905Z
-addr = 0x2588
-name = "aThereIsNoZombi"
-size = 0x22
+[0x4000]
+last_change = 2023-12-10T08:12:32.293305Z
+addr = 0x4000
+name = "data_start"
+size = 0x1
