Updated <GlobalVar: None aGoodLuck; @10017 len=13>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x3d30]
-last_change = 2023-12-10T08:12:32.199144Z
-addr = 0x3d30
-name = "__do_global_dtors_aux_fini_array_entry"
-size = 0x1
+[0x2721]
+last_change = 2023-12-10T08:12:32.208779Z
+addr = 0x2721
+name = "aGoodLuck"
+size = 0xd
