Updated <GlobalVar: None a133m; @8239 len=8>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x4108]
-last_change = 2023-12-10T08:12:32.388056Z
-addr = 0x4108
-name = "fprintf"
-size = 0x1
+[0x202f]
+last_change = 2023-12-10T08:12:32.397169Z
+addr = 0x202f
+name = "a133m"
+size = 0x8
