Updated <GlobalVar: None _end; @16560 len=1>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T07:14:45.945279Z
-last_push_artifact = 0x12ee
-last_push_artifact_type = "function"
+last_push_time = 2023-12-10T08:12:08.186157Z
+last_push_artifact = 0x40b0
+last_push_artifact_type = "global variable"
