--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x15b1]
-last_change = 2023-12-10T08:12:32.461709Z
-addr = 0x15b1
-name = "create"
-size = 0x1
+[0x6ef]
+last_change = 2023-12-10T08:12:32.470540Z
+addr = 0x6ef
+name = "aStderr"
+size = 0x7
