--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x4118]
-last_change = 2023-12-10T08:12:32.488877Z
-addr = 0x4118
-name = "malloc"
+[0x3d20]
+last_change = 2023-12-10T08:12:32.498183Z
+addr = 0x3d20
+name = "__frame_dummy_init_array_entry"
 size = 0x1
