Updated <GlobalVar: None __GNU_EH_FRAME_HDR; @10032 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x4140]
-last_change = 2023-12-10T08:12:32.180276Z
-addr = 0x4140
-name = "rand"
+[0x2730]
+last_change = 2023-12-10T08:12:32.189788Z
+addr = 0x2730
+name = "__GNU_EH_FRAME_HDR"
 size = 0x1
