--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x71a]
-last_change = 2023-12-10T08:12:32.218439Z
-addr = 0x71a
-name = "aTime"
-size = 0x5
+[0x71f]
+last_change = 2023-12-10T08:12:32.227605Z
+addr = 0x71f
+name = "aLibcSo6"
+size = 0xa
