--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:12:32.218439Z
-last_push_artifact = 0x71a
+last_push_time = 2023-12-10T08:12:32.227605Z
+last_push_artifact = 0x71f
 last_push_artifact_type = "global variable"
