Updated <GlobalVar: None aStdin; @1754 len=6>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x6d5]
-last_change = 2023-12-10T08:12:32.369805Z
-addr = 0x6d5
-name = "aFree"
-size = 0x5
+[0x6da]
+last_change = 2023-12-10T08:12:32.378854Z
+addr = 0x6da
+name = "aStdin"
+size = 0x6
