Updated <GlobalVar: None aSrand; @1723 len=6>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x2010]
-last_change = 2023-12-10T08:12:32.433958Z
-addr = 0x2010
-name = "a131m"
-size = 0x8
+[0x6bb]
+last_change = 2023-12-10T08:12:32.442946Z
+addr = 0x6bb
+name = "aSrand"
+size = 0x6
