--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x2730]
-last_change = 2023-12-10T08:12:32.189788Z
-addr = 0x2730
-name = "__GNU_EH_FRAME_HDR"
+[0x3d30]
+last_change = 2023-12-10T08:12:32.199144Z
+addr = 0x3d30
+name = "__do_global_dtors_aux_fini_array_entry"
 size = 0x1
