--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:12:32.189788Z
-last_push_artifact = 0x2730
+last_push_time = 2023-12-10T08:12:32.199144Z
+last_push_artifact = 0x3d30
 last_push_artifact_type = "global variable"
