Updated <GlobalVar: None exit; @16696 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x1996]
-last_change = 2023-12-10T08:12:32.331963Z
-addr = 0x1996
-name = "main"
+[0x4138]
+last_change = 2023-12-10T08:12:32.341571Z
+addr = 0x4138
+name = "exit"
 size = 0x1
