Updated <GlobalVar: None aNumberOfAttack; @9714 len=21>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x1a48]
-last_change = 2023-12-10T08:12:32.237086Z
-addr = 0x1a48
-name = "setup"
-size = 0x1
+[0x25f2]
+last_change = 2023-12-10T08:12:32.247103Z
+addr = 0x25f2
+name = "aNumberOfAttack"
+size = 0x15
