--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:12:32.237086Z
-last_push_artifact = 0x1a48
+last_push_time = 2023-12-10T08:12:32.247103Z
+last_push_artifact = 0x25f2
 last_push_artifact_type = "global variable"
