--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x6d0]
-last_change = 2023-12-10T08:12:32.415510Z
-addr = 0x6d0
-name = "aPuts"
-size = 0x5
+[0x148f]
+last_change = 2023-12-10T08:12:32.424622Z
+addr = 0x148f
+name = "banner"
+size = 0x1
