--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:12:32.606132Z
-last_push_artifact = 0x1ac0
+last_push_time = 2023-12-10T08:12:32.615093Z
+last_push_artifact = 0x6b4
 last_push_artifact_type = "global variable"
