Updated <GlobalVar: None a137m; @8271 len=8>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x1290]
-last_change = 2023-12-10T08:12:32.351638Z
-addr = 0x1290
-name = "deregister_tm_clones"
-size = 0x1
+[0x204f]
+last_change = 2023-12-10T08:12:32.360728Z
+addr = 0x204f
+name = "a137m"
+size = 0x8
