--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:12:32.351638Z
-last_push_artifact = 0x1290
+last_push_time = 2023-12-10T08:12:32.360728Z
+last_push_artifact = 0x204f
 last_push_artifact_type = "global variable"
