Updated <GlobalVar: None a131m; @8208 len=8>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x148f]
-last_change = 2023-12-10T08:12:32.424622Z
-addr = 0x148f
-name = "banner"
-size = 0x1
+[0x2010]
+last_change = 2023-12-10T08:12:32.433958Z
+addr = 0x2010
+name = "a131m"
+size = 0x8
