--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x2721]
-last_change = 2023-12-10T08:12:32.208779Z
-addr = 0x2721
-name = "aGoodLuck"
-size = 0xd
+[0x71a]
+last_change = 2023-12-10T08:12:32.218439Z
+addr = 0x71a
+name = "aTime"
+size = 0x5
