Updated <GlobalVar: None aGlibc24; @1843 len=10>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x16f0]
-last_change = 2023-12-10T08:12:32.311762Z
-addr = 0x16f0
-name = "removez"
-size = 0x1
+[0x733]
+last_change = 2023-12-10T08:12:32.321712Z
+addr = 0x733
+name = "aGlibc24"
+size = 0xa
