--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:12:32.311762Z
-last_push_artifact = 0x16f0
+last_push_time = 2023-12-10T08:12:32.321712Z
+last_push_artifact = 0x733
 last_push_artifact_type = "global variable"
