--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,5 +1,5 @@
-[0x204f]
-last_change = 2023-12-10T08:12:32.360728Z
-addr = 0x204f
-name = "a137m"
-size = 0x8
+[0x6d5]
+last_change = 2023-12-10T08:12:32.369805Z
+addr = 0x6d5
+name = "aFree"
+size = 0x5
