--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:30.835716Z
-last_push_artifact = 0x3d4
+last_push_time = 2023-12-10T08:13:30.845730Z
+last_push_artifact = 0x40e0
 last_push_artifact_type = "global variable"
