Updated <GlobalVar: None .alarm; @4528 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,8 +4,8 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x11a0]
-last_change = 2023-12-10T08:13:30.763641Z
-addr = 0x11a0
-name = ".printf"
+[0x11b0]
+last_change = 2023-12-10T08:13:30.773806Z
+addr = 0x11b0
+name = ".alarm"
 size = 0x1
