--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:30.763641Z
-last_push_artifact = 0x11a0
+last_push_time = 2023-12-10T08:13:30.773806Z
+last_push_artifact = 0x11b0
 last_push_artifact_type = "global variable"
