--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,8 +4,8 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x1349]
-last_change = 2023-12-10T08:13:30.702815Z
-addr = 0x1349
-name = "error"
+[0x1250]
+last_change = 2023-12-10T08:13:30.712205Z
+addr = 0x1250
+name = ".rand"
 size = 0x1
