Updated <GlobalVar: None _ITM_registerTMCloneTable; @16736 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,8 +4,8 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x4158]
-last_change = 2023-12-10T08:13:30.928436Z
-addr = 0x4158
-name = "__gmon_start__"
+[0x4160]
+last_change = 2023-12-10T08:13:30.938772Z
+addr = 0x4160
+name = "_ITM_registerTMCloneTable"
 size = 0x1
