--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,8 +4,8 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x11d0]
-last_change = 2023-12-10T08:13:30.876860Z
-addr = 0x11d0
-name = ".srand"
+[0x17cf]
+last_change = 2023-12-10T08:13:30.887026Z
+addr = 0x17cf
+name = "display"
 size = 0x1
