--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,8 +4,8 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x11f0]
-last_change = 2023-12-10T08:13:30.692469Z
-addr = 0x11f0
-name = ".time"
+[0x1349]
+last_change = 2023-12-10T08:13:30.702815Z
+addr = 0x1349
+name = "error"
 size = 0x1
