--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:30.609071Z
-last_push_artifact = 0x40c8
+last_push_time = 2023-12-10T08:12:32.656839Z
+last_push_artifact = 0x3f50
 last_push_artifact_type = "global variable"
