--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,11 +1,11 @@
+[0x3d4]
+last_change = 2023-12-10T08:13:30.835716Z
+addr = 0x3d4
+name = "elf_gnu_hash_chain"
+size = 0x1
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
-
-[0x1340]
-last_change = 2023-12-10T08:13:30.825788Z
-addr = 0x1340
-name = "frame_dummy"
-size = 0x1
