--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,11 +1,11 @@
-[0x374]
-last_change = 2023-12-10T08:13:30.622685Z
-addr = 0x374
-name = "aGnu_0"
-size = 0x4
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
+
+[0x40d0]
+last_change = 2023-12-10T08:13:30.641853Z
+addr = 0x40d0
+name = "puts"
+size = 0x1
