--- a/global_vars.toml
+++ b/global_vars.toml
@@ -3,3 +3,9 @@ last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
+
+[0x4040]
+last_change = 2023-12-10T08:13:30.804565Z
+addr = 0x4040
+name = "stderr@GLIBC_2.2.5"
+size = 0x1
