--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:30.794056Z
-last_push_artifact = 0x3d38
-last_push_artifact_type = "comment"
+last_push_time = 2023-12-10T08:13:30.804565Z
+last_push_artifact = 0x4040
+last_push_artifact_type = "global variable"
