--- a/comments.toml
+++ b/comments.toml
@@ -1,3 +1,9 @@
+[0x948]
+last_change = 2023-12-10T08:13:30.918106Z
+addr = 0x948
+comment = "R_X86_64_JUMP_SLOT free\n"
+decompiled = false
+
 [0x11b8]
 last_change = 2023-12-10T06:55:32.834339Z
 addr = 0x11b8
