--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:30.732379Z
-last_push_artifact = 0x40d8
+last_push_time = 2023-12-10T08:13:30.742500Z
+last_push_artifact = 0x1300
 last_push_artifact_type = "global variable"
