--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:30.682309Z
-last_push_artifact = 0x11e0
+last_push_time = 2023-12-10T08:13:30.692469Z
+last_push_artifact = 0x11f0
 last_push_artifact_type = "global variable"
