Updated <GlobalVar: None free; @16568 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,8 +4,8 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x17cf]
-last_change = 2023-12-10T08:13:30.887026Z
-addr = 0x17cf
-name = "display"
+[0x40b8]
+last_change = 2023-12-10T08:13:30.897718Z
+addr = 0x40b8
+name = "free"
 size = 0x1
