--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:30.887026Z
-last_push_artifact = 0x17cf
+last_push_time = 2023-12-10T08:13:30.897718Z
+last_push_artifact = 0x40b8
 last_push_artifact_type = "global variable"
