Updated <GlobalVar: None fclose; @16600 len=1>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:30.722555Z
-last_push_artifact = 0x40c0
+last_push_time = 2023-12-10T08:13:30.732379Z
+last_push_artifact = 0x40d8
 last_push_artifact_type = "global variable"
