--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,8 +4,8 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x40c0]
-last_change = 2023-12-10T08:13:30.722555Z
-addr = 0x40c0
-name = "putchar"
+[0x40d8]
+last_change = 2023-12-10T08:13:30.732379Z
+addr = 0x40d8
+name = "fclose"
 size = 0x1
