--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:30.918106Z
-last_push_artifact = 0x948
-last_push_artifact_type = "comment"
+last_push_time = 2023-12-10T08:13:30.928436Z
+last_push_artifact = 0x4158
+last_push_artifact_type = "global variable"
