--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:31.054187Z
-last_push_artifact = 0x18a5
+last_push_time = 2023-12-10T08:13:31.064293Z
+last_push_artifact = 0x1000
 last_push_artifact_type = "global variable"
