--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:30.989448Z
-last_push_artifact = 0x4020
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-10T08:13:31.000415Z
+last_push_artifact = "Elf64_Sym"
+last_push_artifact_type = "struct"
