Updated <GlobalVar: None cls; @5038 len=1>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:31.107285Z
-last_push_artifact = 0x1349
+last_push_time = 2023-12-10T08:13:31.123005Z
+last_push_artifact = 0x13ae
 last_push_artifact_type = "global variable"
