--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,8 +4,14 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x1349]
-last_change = 2023-12-10T08:13:31.107285Z
-addr = 0x1349
-name = "error"
+[0x13ae]
+last_change = 2023-12-10T08:13:31.123005Z
+addr = 0x13ae
+name = "cls"
+size = 0x1
+
+[0x4148]
+last_change = 2023-12-10T08:13:31.095797Z
+addr = 0x4148
+name = "__cxa_finalize"
 size = 0x1
