Updated <GlobalVar: None completed.0; @16456 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,8 +4,8 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x1000]
-last_change = 2023-12-10T08:13:31.064293Z
-addr = 0x1000
-name = "_init"
+[0x4048]
+last_change = 2023-12-10T08:13:31.075218Z
+addr = 0x4048
+name = "completed.0"
 size = 0x1
