--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,8 +4,8 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x779]
-last_change = 2023-12-10T08:13:31.085561Z
-addr = 0x779
-name = "aGmonStart"
-size = 0xf
+[0x4148]
+last_change = 2023-12-10T08:13:31.095797Z
+addr = 0x4148
+name = "__cxa_finalize"
+size = 0x1
