--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,8 +4,8 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x4030]
-last_change = 2023-12-10T08:13:31.032953Z
-addr = 0x4030
-name = "stdin@GLIBC_2.2.5"
+[0x1160]
+last_change = 2023-12-10T08:13:31.043522Z
+addr = 0x1160
+name = ".putchar"
 size = 0x1
