--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:36.822776Z
-last_push_artifact = 0x6c9
+last_push_time = 2023-12-10T08:13:36.833909Z
+last_push_artifact = 0x3fd8
 last_push_artifact_type = "global variable"
