--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x703]
-last_change = 2023-12-10T08:13:36.731740Z
-addr = 0x703
-name = "aError"
-size = 0x6
+[0x2468]
+last_change = 2023-12-10T08:13:36.743485Z
+addr = 0x2468
+name = "aThreatLevelShi"
+size = 0x5a
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
