--- a/functions/00004148.toml
+++ b/functions/00004148.toml
@@ -1,4 +1,9 @@
 [metadata]
 addr = 0x4148
 size = 0x8
-last_change = 2023-12-10T08:13:36.635271Z
+last_change = 2023-12-10T08:13:36.647390Z
+
+[header]
+last_change = 2023-12-10T08:13:36.647390Z
+name = "__imp___cxa_finalize"
+addr = 0x4148
