--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x2607]
-last_change = 2023-12-10T08:13:36.671300Z
-addr = 0x2607
-name = "aHhd"
-size = 0x5
+[0x729]
+last_change = 2023-12-10T08:13:36.684040Z
+addr = 0x729
+name = "aGlibc27"
+size = 0xa
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
