Updated <GlobalVar: None __cxa_finalize_ptr; @16376 len=8>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:36.799834Z
-last_push_artifact = 0x2008
+last_push_time = 2023-12-10T08:13:36.811566Z
+last_push_artifact = 0x3ff8
 last_push_artifact_type = "global variable"
