--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,10 +4,10 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x2008]
-last_change = 2023-12-10T08:13:36.799834Z
-addr = 0x2008
-name = "a134m"
+[0x3ff8]
+last_change = 2023-12-10T08:13:36.811566Z
+addr = 0x3ff8
+name = "__cxa_finalize_ptr"
 size = 0x8
 
 [0x4148]
