--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,6 +4,12 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
+[0x2621]
+last_change = 2023-12-10T08:13:36.659363Z
+addr = 0x2621
+name = "aLf"
+size = 0x4
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
