Updated <GlobalVar: None aFprintf; @1708 len=8>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:36.856880Z
-last_push_artifact = 0x3fb8
+last_push_time = 2023-12-10T08:13:36.868632Z
+last_push_artifact = 0x6ac
 last_push_artifact_type = "global variable"
