--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,11 +4,11 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x3f48]
-last_change = 2023-12-10T08:13:36.605691Z
-addr = 0x3f48
-name = ""
-size = 0x8
+[0x754]
+last_change = 2023-12-10T08:13:36.621661Z
+addr = 0x754
+name = "aGlibc"
+size = 0x9
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
