--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:36.605691Z
-last_push_artifact = 0x3f48
+last_push_time = 2023-12-10T08:13:36.621661Z
+last_push_artifact = 0x754
 last_push_artifact_type = "global variable"
