--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-10T08:13:36.868632Z
-last_push_artifact = 0x6ac
+last_push_time = 2023-12-10T08:13:36.880416Z
+last_push_artifact = 0x3f98
 last_push_artifact_type = "global variable"
