--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
+[0x685]
+last_change = 2023-12-10T08:13:36.915721Z
+addr = 0x685
+name = "aAlarm"
+size = 0x6
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
-
-[0x6f6]
-last_change = 2023-12-10T08:13:36.904259Z
-addr = 0x6f6
-name = "aPutchar"
-size = 0x8
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
